chore: upgrade to Java 21 (#212)
Closes: FST-88